# dsml-design-pattern

./: README.md  pyproject.toml
factory_pattern/: managing_models.ipynb
