[tool.poetry]
name = "design-pattern-related"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
polars = "^1.3.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"
lightgbm = "^4.5.0"
tensorflow = "^2.17.0"
torch = "^2.4.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
