[tool.poetry]
name = "design-pattern-related"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
polars = "^1.3.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"
lightgbm = "^4.5.0"
tensorflow = "^2.17.0"
torch = "^2.4.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
pytest-mock = "^3.14.0"
setuptools = "^75.1.0"
pydantic = "^2.9.2"
yfinance = "^0.2.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

